# CS4500_Project

./: CMakeLists.txt  Dockerfile  MEMO.md  Makefile  small.txt  valgrind_sup.txt
data/: 100k.txt  commits.ltgt  data.sor  projects.ltgt  users.ltgt
report/: doc.md
src/: application.h  array.h  demo.h  element_column.h  kvstore.h  linus.h  main.cpp  map.h  printer.h  server.cpp  word_count.h
src/adapter/: cmd.h  file.h
src/adapter/sor/: dataadapter.h  lineparser.h  schema.h  schemabuilder.h  valuefactory.h
src/adapter/table/: column.h
src/adapter/values/: value.h  valuefactory.h  valueproducer.h  valueproducers.h  values.h  valuetypes.h
src/dataframe/: column_type.h  dataframe.h  element_column.h  modified_dataframe.h  utils.h
src/dataframe/columns/: chunked_column.h  column.h  concrete_columns.h
src/ea2/: application.h  dataframe_description.h  kbstore.h
src/ea2/kvstore/: kvstore.cpp  kvstore.h
src/kvstore/: kbstore.h  kvstore.cpp  kvstore.h
src/network/: client.cpp  client.h  element_column.h  example_classes.h  messages.h  network.h  serial.h  server.cpp  server.h
src/network/shared/: messages.h  network.h
src/utils/: column_type.h  dataframe_description.h  key.h  serial.h
src/utils/datastructures/: element_column.h  map.h
src/utils/instructor-provided/: string.h
test/: test-array.cpp  test-map-additionalTests.cpp  test-map.cpp  test.cpp  test_adapter.cpp  test_applications.cpp  test_dataframe.cpp  test_demo.cpp  test_ea2.cpp  test_map.cpp  test_network.cpp  test_util.cpp  test_util.h  tests  utils.h
test/adapter/res/: small.sor
test/adapter/sor/: lineparser_test.h  schema.sor  valuefactory_test.h
test/dataframe/: parallel_map_examples.h  personal_test_suite.cpp
test/network/: networkTest.h  network_test.cpp
(+4 files in other folders)
